[gd_scene load_steps=6 format=3 uid="uid://w4jujpatu6b4"]

[ext_resource type="Script" uid="uid://bltgmotcc1wq8" path="res://scenes/claude/claude.gd" id="1_cc7t5"]
[ext_resource type="Texture2D" uid="uid://ccj6g25wnde8g" path="res://scenes/claude/assets/settings.png" id="2_djybm"]
[ext_resource type="Texture2D" uid="uid://b10q8h4uap3lt" path="res://scenes/claude/assets/claude.png" id="2_lf8bk"]
[ext_resource type="Texture2D" uid="uid://c5mxvs24jyss2" path="res://scenes/claude/assets/settings-pressed.png" id="4_aob0g"]
[ext_resource type="Texture2D" uid="uid://dn2iojm77u55k" path="res://scenes/claude/assets/settings-hovered.png" id="5_4l25e"]

[node name="Claude" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cc7t5")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 0.843137)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="OutputRichTextLabel" type="RichTextLabel" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
bbcode_enabled = true
scroll_following = true
selection_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("2_lf8bk")
expand_mode = 2

[node name="InputLineEdit" type="LineEdit" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "What's on your mind?"
keep_editing_on_text_submit = true
flat = true
caret_blink = true
caret_force_displayed = true

[node name="SettingsTextureButton" type="TextureButton" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(48, 32)
layout_mode = 2
texture_normal = ExtResource("2_djybm")
texture_pressed = ExtResource("4_aob0g")
texture_hover = ExtResource("5_4l25e")
stretch_mode = 3

[node name="HttpRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true

[connection signal="gui_input" from="MarginContainer/ColorRect/MarginContainer/VBoxContainer/HBoxContainer/InputLineEdit" to="." method="_on_input_line_edit_gui_input"]
[connection signal="pressed" from="MarginContainer/ColorRect/MarginContainer/VBoxContainer/HBoxContainer/SettingsTextureButton" to="." method="_on_texture_button_pressed"]
